--- a/r4babs1/week-8/study_before_workshop.qmd
+++ b/r4babs1/week-8/study_before_workshop.qmd
@@ -3,9 +3,7 @@ title: "Week 8: Types of variable, the normal distribution and summarising data"
 subtitle: "Independent Study to prepare for workshop"
 ---
 
-1.  Prepare
-
-    i.  📖 Read [Ideas about data](https://3mmarand.github.io/comp4biosci/ideas_about_data.html)
+1.  📖 Read [Ideas about data](https://3mmarand.github.io/comp4biosci/ideas_about_data.html)
 
 
 
