--- a/r4babs1/week-7/study_before_workshop.qmd
+++ b/r4babs1/week-7/study_before_workshop.qmd
@@ -3,12 +3,16 @@ title: "Week 7: Introduction to R, RStudio and project organisation"
 subtitle: "Independent Study to prepare for workshop"
 ---
 
-1.  Prepare
+1.  **Either** 
+    
+    -   📖 Read [First Steps in RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html) in 
+    
+    **OR** 
+    
+    -   📹 Watch
 
-    i.  **Either** 📖 Read [First Steps in RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html) in **OR** 📹 Watch
+        {{< video https://www.youtube.com/watch?v=7oLLjkTNrjY >}}
 
-    {{< video https://www.youtube.com/watch?v=7oLLjkTNrjY >}}
-
-    {{< video https://youtu.be/2Ke1FGdaMSI >}}
+        {{< video https://youtu.be/2Ke1FGdaMSI >}}
 
 
